--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build --turbopack",
-    "start": "next start -p $FREELANCER_PORT",
+    "start": "next start",
     "lint": "eslint"
   },
   "dependencies": {
